# Moviemate

./: .env.production  .env.render  .gitignore  DEPLOYMENT_GUIDE.md  Procfile  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
moviemate/: requirements.txt
moviemate-frontend/: index.html  package-lock.json  package.json  vite.config.js
moviemate-frontend/src/: App.jsx  index.css
moviemate-frontend/src/components/: CreateMovieModal.jsx  CreatePlatformModal.jsx  Dashboard.jsx  EditMovieModal.jsx  EditPlatformModal.jsx  Login.jsx  MovieCard.jsx  MovieModal.jsx  Navigation.jsx
moviemate-frontend/src/hooks/: useAuth.jsx
moviemate-frontend/src/services/: api.js
moviemate/moviemate/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
moviemate/moviemate_app/: admin.py  apps.py  authentication.py  models.py  views.py
moviemate/moviemate_app/api/: pagination.py  permisions.py  serializers.py  throttling.py  urls.py  views.py
moviemate/moviemate_app/management/commands/: fix_ratings.py  make_admin.py
moviemate/moviemate_app/migrations/: 0001_initial.py  0002_streamplatform_watchlist_delete_movie.py  0003_streamplatform_created_at.py  0004_watchlist_platform.py  0005_reveiw.py  0006_reveiw_review_user.py  0007_watchlist_avg_rating_watchlist_number_rating_and_more.py
moviemate/static/css/: style.css
moviemate/templates/: index.html  login.html  movie_detail.html  react_app.html
moviemate/user_app/: middleware.py
moviemate/user_app/api/: cookie_auth_views.py  serializers.py  urls.py  views.py
